# my_esp32s3_keyboard

./: .clang-format  .gitignore  CMakeLists.txt  README.md  large_ffat_16MB.csv  my_ffat_8MB.csv  my_kbd_sdkconfig.defaults  my_receiver_sdkconfig.defaults  sdkconfig  sdkconfig.defaults  sdkconfig.old  按键名转换.xlsx
components/my_ble_hid/: CMakeLists.txt  my_ble_hid.c  my_esp_hid_gap.c
components/my_config/: CMakeLists.txt  my_config.c
components/my_display/: CMakeLists.txt  idf_component.yml  my_display.c  my_lvgl_fs.c  my_lvgl_init.c  my_lvgl_styles.c
components/my_fat_mount/: CMakeLists.txt  Kconfig.projbuild  my_fat_mount.c
components/my_fat_mount/fat_data/web/control/: dev.css  dev.html  dev.js  index.html  kbd.css  kbd.html  kbd.js  script.js  style.css
components/my_fat_mount/fat_data/web/fileserver/: script.js  style.css
components/my_fat_mount/include/: README.md  my_fat_mount.h
components/my_file_server/: CMakeLists.txt  Kconfig.projbuild  control.html  dev.css  dev.html  dev.js  index.html  kbd.css  kbd.html  kbd.js  my_file_server.c  my_fs_private.c
components/my_http_start/: CMakeLists.txt  my_http_start.c
components/my_ina226/: CMakeLists.txt  idf_component.yml  my_ina226.c
components/my_init/: CMakeLists.txt  my_init.c
components/my_input_keys/: CMakeLists.txt  my_encoder_keys.c  my_gpio_keys.c  my_input_keys.c  my_matrix_keys.c
components/my_keyboard/: CMakeLists.txt  my_kb_key_handler.c  my_keyboard.c
components/my_led_strips/: CMakeLists.txt  idf_component.yml  my_led_strips.c
components/my_usb/: CMakeLists.txt  idf_component.yml  my_msc.c  my_usb.c  my_usb_hid.c  my_usbd_descriptor.c
components/my_usb/components/my_esp_tinyusb/: CMakeLists.txt  idf_component.yml  tusb_msc_storage.c
components/my_usb/include/: my_msc.h  my_usb.h  my_usb_hid.h  my_usbd_descriptor.h
components/my_wifi_start/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  my_espnow.c  my_wifi_start.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  my_esp_timer.c  my_ota.c
main/include/: my_esp_timer.h  my_ota.h
receiver_firmware/: flash_app_args
(+38 files in other folders)
